--- a/src/Makefile
+++ b/src/Makefile
@@ -6,7 +6,7 @@
 #    By: lscariot <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2016/01/22 09:44:59 by lscariot          #+#    #+#              #
-#    Updated: 2016/03/02 14:47:27 by lscariot         ###   ########.fr        #
+#    Updated: 2016/03/02 22:09:59 by lucas            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
